# rust_markdown_lsp_server

./: .gitignore  .nvim.lua  Cargo.toml  README.md  rust-markdown-lsp.toml  test.md  test2.md  test3.md
.nvim/lsp/: rust-markdown-lsp.lua
crates/core/: Cargo.toml
crates/core/src/: macros.rs  path.rs  uri.rs
crates/core/src/document/: mod.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: lib.rs  path.rs  text_buffer_conversions.rs  uri.rs  vault.rs
crates/lib-core/src/document/: metadata.rs  mod.rs  references.rs
crates/lib-core/src/path/: error.rs  mod.rs  slug.rs
crates/lib-core/src/vault/: helpers.rs  mod.rs
crates/lib-lsp/: Cargo.toml
crates/lib-lsp/src/: config.rs  helpers.rs  lib.rs  macros.rs  main_loop.rs  messages.rs  server.rs  server_state.rs  test_utils.rs  uri.rs
crates/lib-lsp/src/handlers/: code_action.rs  diagnostics.rs  did_change.rs  did_close.rs  did_open.rs  document_symbol.rs  goto_definition.rs  hover.rs  initialize.rs  link_resolver.rs  mod.rs  references.rs  rename.rs  will_create.rs  workspace_symbol.rs
crates/lib-lsp/src/handlers/completion/: completion_resolve.rs  mod.rs
crates/lib-lsp/src/handlers/rename/: did_rename.rs  mod.rs  will_rename.rs
crates/lib-lsp/src/helpers/: mod.rs  path.rs  references.rs  slug.rs
crates/lib-lsp/src/rpc/: error_codes.rs  mod.rs
crates/lib-parser/: Cargo.toml
crates/lib-parser/benches/: parser.rs
crates/lib-parser/examples/: comprehensive_test.rs  detailed_test.rs  error_recovery_test.rs  frontmatter_integration.rs  header_test.rs  inline_test.rs  perf_estimate.rs  span_test.rs  test_parser.rs  yaml_test.rs
crates/lib-parser/src/: lib.rs  markdown.rs  yaml.rs
crates/lib-parser/tests/: common.rs  markdown_parser_tests.rs  parser_tests.rs  test_uncommented.rs  yaml_parser_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: config.rs  helpers.rs  main_loop.rs  messages.rs  rpc.rs  server.rs
crates/lsp/src/handlers/: code_action.rs  diagnostics.rs  did_change.rs  did_open.rs  goto_definition.rs  hover.rs  initialize.rs  link_resolver.rs  mod.rs  references.rs
crates/lsp/src/handlers/completion/: completion_resolve.rs  mod.rs
crates/lsp_types/: Cargo.toml
crates/lsp_types/src/: code_action.rs  lib.rs  uri.rs  workspace.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parser.rs  test_large.md
crates/parser/examples/: comprehensive_test.rs  detailed_test.rs  error_recovery_test.rs  frontmatter_integration.rs  header_test.rs  inline_test.rs  perf_estimate.rs  span_test.rs  test_parser.rs  yaml_test.rs
crates/parser/src/: lib.rs  markdown.rs
crates/parser/tests/: markdown_parser_tests.rs  test_uncommented.rs  yaml_parser_tests.rs
parser/: Cargo.toml
parser/benches/: parser.rs  test_medium.md  test_small.md
parser/src/: lib.rs  markdown.rs  markdown_parser.rs  yaml.rs
parser/tests/: common.rs  markdown_parser_tests.rs
src/: config.rs  lib.rs  macros.rs  main.rs  message.rs  parser.rs  path.rs  rpc.rs  text_buffer_conversions.rs  uri.rs
src/document/: mod.rs  references.rs  uri.rs
src/lsp/: code_action.rs  completion.rs  diagnostics.rs  did_change.rs  did_open.rs  goto_definition.rs  helpers.rs  hover.rs  initialize.rs  link_resolver.rs  mod.rs  references.rs  server.rs  state.rs  workspace.rs
src/lsp/completion/: completion.rs  completion_resolve.rs  mod.rs
