[package]
name = "rust_markdown_lsp"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/lib-core", "crates/lib-lsp", "crates/lib-parser"]
resolver = "2"

[workspace.dependencies]
ariadne = "0.5.0"
chumsky = "0.12.0"
clap = "4.5.55"
etcetera = "0.10.0"
lib-core = { path = "./crates/lib-core", version = "0.1.0" }
lib-lsp = { path = "./crates/lib-lsp", version = "0.1.0" }
lib-parser = { path = "./crates/lib-parser", version = "0.1.0" }
lsp-types = "0.97.0"
miette = "7.5.0"
pathdiff = "0.2.3"
ropey = "1.6.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.19"
walkdir = "2.5.0"

[dependencies]
ariadne = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
etcetera = { workspace = true }
lib-core = { workspace = true }
lib-lsp = { workspace = true }
lib-parser = { workspace = true }
lsp-types = { workspace = true }
miette.workspace = true
pathdiff = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "rust_markdown_lsp"
path = "src/main.rs"
bench = false
