[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-parser = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
pathdiff = { workspace = true }
ropey = { workspace = true }
thiserror = { workspace = true }
