[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-parser = { workspace = true }
gen-lsp-types = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
path-clean = { workspace = true }
pathdiff = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
