[package]
name = "lib-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
path-clean = { workspace = true }
pathdiff = { workspace = true }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
